--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
